--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+	outline: none;
+}
+
 @layer base {
   @font-face {
     font-family: 'Montserrat';
